# physics-engine

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  dependencies.sh  err.txt  main.cpp
include/: bufferlayout.h  camera.h  cube.h  debugging.h  indexbuffer.h  material.h  physicsobject.h  renderer.h  shaders.h  vertexarray.h  vertexbuffer.h
shaders/: fragment.glsl  vertex.glsl
src/: main.cpp  renderer.cpp  shaders.cpp  vertexbuffer.cpp
